[package]
name = "tsn-map"
version = "0.1.0"
edition = "2021"
authors = ["hwkim3330"]
description = "TSN Network Visualization and Analysis Tool - Like nmap + Wireshark for TSN"
license = "MIT"
repository = "https://github.com/hwkim3330/tsn-map"

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Packet capture
pcap = "2"
pnet = "0.35"
etherparse = "0.15"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Network utilities
socket2 = "0.5"
libc = "0.2"

# Configuration
config = "0.14"
clap = { version = "4", features = ["derive"] }

# UUID for packet/flow identification
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "tsn-map"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
