[package]
name = "tsn-map-app"
version = "0.1.0"
description = "TSN-Map Desktop Application"
authors = ["hwkim3330"]
license = "MIT"
repository = "https://github.com/hwkim3330/tsn-map"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = ["codegen"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
